; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_worker_node_manager.c_WorkerGetNodeWithName.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_worker_node_manager.c_WorkerGetNodeWithName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@WORKER_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i8*)* @WorkerGetNodeWithName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @WorkerGetNodeWithName(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  %7 = call i32* (...) @GetWorkerNodeHash()
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @hash_seq_init(i32* %4, i32* %8)
  br label %10

10:                                               ; preds = %24, %1
  %11 = call %struct.TYPE_4__* @hash_seq_search(i32* %4)
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %3, align 8
  %12 = icmp ne %struct.TYPE_4__* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %10
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i8*, i8** %2, align 8
  %18 = load i32, i32* @WORKER_LENGTH, align 4
  %19 = call i32 @strncmp(i32 %16, i8* %17, i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %13
  %23 = call i32 @hash_seq_term(i32* %4)
  br label %25

24:                                               ; preds = %13
  br label %10

25:                                               ; preds = %22, %10
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %26
}

declare dso_local i32* @GetWorkerNodeHash(...) #1

declare dso_local i32 @hash_seq_init(i32*, i32*) #1

declare dso_local %struct.TYPE_4__* @hash_seq_search(i32*) #1

declare dso_local i32 @strncmp(i32, i8*, i32) #1

declare dso_local i32 @hash_seq_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
